# secab

./: Makefile  db.sqlite3  hello.py  manage.py  pyproject.toml
apps/news/: models.py  urls.py  views.py
apps/news/migrations/: 0001_initial.py
apps/theme/: apps.py
apps/theme/static_src/: tailwind.config.js
secab/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/wagtail/news/: home_page.html
