[project]
name = "secab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.5",
    "django-tailwind[reload]>=3.8.0",
    "ruff>=0.9.3",
    "wagtail>=6.3.2",
    "cookiecutter>=2.6.0",
]

[tool.setuptools]
packages = ["secab", "apps"]
